Emscripten build fixes; file loads in browser
Former-commit-id: eb376663d79c873cb3fad90cb4f779d720a9c75b

--- a/test.html
+++ b/test.html
@@ -32,7 +32,7 @@
           alert('Canvas not available :(');
           return;
         }
-        Module.run();
+        Module.run(['admiral.264']);
       }
     </script>
   <body onload='onLoad()' style='background-color: black; color: white'>
