test.html fixes
Former-commit-id: 6d257226e2d49bb621e36986f59d46c8416e167d

--- a/test.html
+++ b/test.html
@@ -17,9 +17,9 @@
 
       // Replace main loop handler
 
-      _runMainLoop = function() {
+      __Z11runMainLoopv = function() {
           // TODO: only delay when proper to do so
-          setInterval(_mainLoopIteration, 1000/50);
+          setInterval(__Z17mainLoopIterationv, 1000/50);
       }
 
       // Start everything on load
