--- a/test.html
+++ b/test.html
@@ -9,30 +9,6 @@
     <script src='Avc/avc.js' type='text/javascript'></script>
     <script type='text/javascript'>
 
-      // Replace main loop handler
-
-      __Z11runMainLoopv = function() {
-          // TODO: only delay when proper to do so
-          setInterval(__Z17mainLoopIterationv, 1000/50);
-      }
-
-      // DEBUGGING
-
-      var frameCounter = 0;
-      var zzzzzzzzz_SDL_Flip = function(surf) {
-        alert('pause'); return;
-        var surfData = SDL.surfaces[surf];
-        var num = surfData.image.data.length;
-        var data = surfData.image.data;
-        var buffer = surfData.buffer;
-        alert("\n=== dumping frame " + [frameCounter, num, buffer] + " ===\n\n");
-        frameCounter++;
-        var minn = Math.min(surfData.height, surfData.width);
-        for (var y = 0; y < minn; y++) {
-          console.log(y + ': ' + HEAP8[buffer + y*surfData.width + y*4]);
-        }
-      }
-
       // Start everything on load
 
       function onLoad() {
@@ -46,11 +22,9 @@
         if (arrayBuffer) {
           var byteArray = new Uint8Array(arrayBuffer);
           var array = Array.prototype.slice.apply(byteArray);
-          FS.createDataFile('/', 'admiral.264', array, true, false);
-          assert(array[0] == 0 && array[4] == 103); // sanity
+          Module.FS.createDataFile('/', 'admiral.264', array, true, false);
+          //assert(array[0] == 0 && array[4] == 103); // sanity
         } else alert('load fail :(');
-
-        FS.root.write = true;
 
         // Pass canvas and context to the generated code, and do the actual run() here
         Module.canvas = document.getElementById('canvas');
@@ -65,8 +39,9 @@
   <body onload='onLoad()' style='background-color: black; color: white'>
     <center>
       <canvas id='canvas'></canvas>
+      <hr>
+      <div id='fps'></div>
     </center>
-    <div id='output'></div>
   </body>
 </html>
 
