--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
         noInitialRun: true
       };
     </script>
-    <script src='Avc/avc.js' type='text/javascript'></script>
+    <script src='Avc/avc.elim.js' type='text/javascript'></script>
     <script type='text/javascript'>
 
       // Start everything on load
