Use closure compiler
Former-commit-id: 0fa3fb99298dd3c8e3e54db93d311a7ae9b0316c

--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
         noInitialRun: true
       };
     </script>
-    <script src='Avc/avc.elim.js' type='text/javascript'></script>
+    <script src='Avc/avc.elim.cc.js' type='text/javascript'></script>
     <script type='text/javascript'>
 
       // Start everything on load
