Show mozilla video, and updated builds with latest corrections
Former-commit-id: c59b838792c2228d8068bd2b36b95840be83bb41

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
 
         // Get the file
         var xhr = new XMLHttpRequest();
-        xhr.open("GET", 'Media/admiral.264', false);
+        xhr.open("GET", 'Media/mozilla.264', false);
         xhr.responseType = "arraybuffer";
         xhr.send(null);
         var arrayBuffer = xhr.response;
