Cleaned up index page.
Former-commit-id: fd3bcb1bc325d784a303ddcc10c25dc5d7ed32c8

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <style type="text/css">
     body {
       margin-top: 1.0em;
-      background-color: #9baaed;
       font-family: Helvetica, Arial, FreeSans, san-serif;
       color: #000000;
     }
@@ -16,7 +15,7 @@
       margin: 0 auto;
       width: 700px;
     }
-    h1 { font-size: 3.8em; color: #645512; margin-bottom: 3px; }
+    h1 { font-size: 3.8em; margin-bottom: 3px; }
     h1 .small { font-size: 0.4em; }
     h1 a { text-decoration: none }
     h2 { font-size: 1.5em; color: #645512; }
@@ -32,36 +31,14 @@
 
 <body>
   <a href="http://github.com/mbebenita/Broadway"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/mbebenita/Broadway/zipball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/zip.png"></a>
-      <a href="http://github.com/mbebenita/Broadway/tarball/master">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
-    <h1><a href="http://github.com/mbebenita/Broadway">Broadway</a>
-      <span class="small">by <a href="http://github.com/mbebenita">mbebenita</a></span></h1>
-
+    <h1>Broadway.js</h1>
     <div class="description">
-      A JavaScript H.264 decoder.
+      A JavaScript H.264 decoder, view a <a href="broadway.html">Demo</a> here.
     </div>
-
-    <h2>Authors</h2>
-<p>Alon Zakai (alonzakai@gmail.com)<br/>Michael Bebenita (mbebenita@gmail.com)</p>
-<h2>Contact</h2>
-<p>Michael Bebenita (mbebenita@gmail.com)<br/>      </p>
-
-
-    <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/mbebenita/Broadway/zipball/master">zip</a> or
-      <a href="http://github.com/mbebenita/Broadway/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
+  
+    <p>You can clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/mbebenita/Broadway</pre>
     </p>
@@ -69,9 +46,6 @@
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/mbebenita/Broadway">mbebenita/Broadway</a>
     </div>
-
   </div>
-
-  
 </body>
 </html>
