Fixed score calculation.
Former-commit-id: 62a7098530dbc82ce2eee18a3d8be0c4cbc92d59

--- a/broadway.html
+++ b/broadway.html
@@ -120,7 +120,7 @@
         var scoreTimeout = 60;
         if (elapsed > scoreTimeout && scoreCalculated == false) {
           scoreCalculated = true;
-          document.getElementById('score').innerHTML = fps.toFixed(2);
+          document.getElementById('score').innerHTML = fpsSinceStart.toFixed(2);
         }
         if (scoreCalculated == false) {
           if (polluted) {
