Commenting out previously committed _paint override.
Former-commit-id: 6cc79ac138d56f8e0291181a9e117cbcf32c0746

--- a/Demo/broadway.html
+++ b/Demo/broadway.html
@@ -168,7 +168,7 @@
           alert('Canvas not available :(');
           return;
         }
-        _paint = function () {};
+        // _paint = function () {};
         console.info("Running: " + clip);
         Module.run(['video.264']);
 
