Clearer FPS display
Former-commit-id: 376638bcd3baded9854017a1ce38aa3b0fdd93e2

--- a/Demo/broadway.html
+++ b/Demo/broadway.html
@@ -314,7 +314,7 @@
             </tr>
             <tr>
               <th>Average FPS (All / Steady)</th>
-              <td><span id='fpsSinceStart' style="color: green;"></span>
+              <td><span id='fpsSinceStart' style="color: green;"></span> /
                 <span id='fpsSinceSteady' style="color: green;"></span></td>
             </tr>
             <tr>
