--- a/broadway.html
+++ b/broadway.html
@@ -225,15 +225,45 @@
         var luma = HEAPU8.subarray($luma);
         var cb = HEAPU8.subarray($cb);
         var cr = HEAPU8.subarray($cr);
-        paintLuma(width, height, luma);
+        
+        paintGL(luma, cb, cr, width, height);
       }
     </script>
 
   <script id="shader-fs" type="x-shader/x-fragment">
+    #ifdef GL_ES
+    precision highp float;
+    #endif
+
     varying highp vec2 vTextureCoord;
-    uniform sampler2D uSampler;
+
+    uniform sampler2D YTexture;
+    uniform sampler2D CbTexture;
+    uniform sampler2D CrTexture;
+
+    int clampInt(int v, int min, int max) {
+        if (v < min) {
+            return min;
+        } else if (v > max) {
+            return max;
+        }
+        return v;
+    }
+
     void main(void) {
-        gl_FragColor = texture2D(uSampler, vec2(vTextureCoord.s, vTextureCoord.t));
+        vec4 y = texture2D(YTexture, vec2(vTextureCoord.s, vTextureCoord.t));
+        vec4 cb = texture2D(CbTexture, vec2(vTextureCoord.s, vTextureCoord.t));
+        vec4 cr = texture2D(CrTexture, vec2(vTextureCoord.s, vTextureCoord.t));
+
+        int c = int(y.x * 255.0) - 16;
+        int d = int(cb.x * 255.0) - 128;
+        int e = int(cr.x * 255.0) - 128;
+
+        int red = clampInt(int((298 * c + 409 * e + 128) / 256), 0, 255);
+        int green = clampInt(int((298 * c - 100 * d - 208 * e + 128) / 256), 0, 255);
+        int blue = clampInt(int((298 * c + 516 * d + 128) / 256), 0, 255);
+        
+        gl_FragColor = vec4(float(red) / 255.0, float(green) / 255.0, float(blue) / 255.0, 1);
     }
   </script>
   <script id="shader-vs" type="x-shader/x-vertex">
