Added Closure optimizations to new codec.
Former-commit-id: ba3715214bb4f77c4eb1c95125a0fc5bf48d1650

--- a/Demo/broadway.html
+++ b/Demo/broadway.html
@@ -278,7 +278,7 @@
   <div id="doc">
     <header>
       <h1 id="site-title"><b>Broadway.js</b></h1>
-      <p id="tagline">An H.264 Decoder in Pure JavaScript</p>
+      <p id="tagline">An H.264 Decoder in Pure JavaScript <a href="broadway-new.html">(Try New Codec)</a></p>
     </header>
     <div>
       <div id="setting">
