--- a/Demo/broadway-new.html
+++ b/Demo/broadway-new.html
@@ -278,7 +278,7 @@
   <div id="doc">
     <header>
       <h1 id="site-title"><b>Broadway.js (NEW)</b></h1>
-      <p id="tagline">An H.264 Decoder in Pure JavaScript</p>
+      <p id="tagline">An H.264 Decoder in Pure JavaScript <a href="broadway.html">(Try Old Codec)</a></p>
     </header>
     <div>
       <div id="setting">
