Updated to latest build.
Former-commit-id: d89a7481774030f04a999cc46e1b434d2a9c9fcb

--- a/broadway-new.html
+++ b/broadway-new.html
@@ -5,12 +5,12 @@
 <style>
 /* MetaWebPro font family licensed from fontshop.com. WOFF-FTW! */
 @font-face {
-	font-family: 'MetaBlack';
-	src: url('http://mozcom-cdn.mozilla.net/img/fonts/MetaWebPro-Black.eot');
-	src: local('☺'),
-		url('http://mozcom-cdn.mozilla.net/img/fonts/MetaWebPro-Black.woff')
-		format('woff');
-	font-weight: bold;
+    font-family: 'MetaBlack';
+    src: url('http://mozcom-cdn.mozilla.net/img/fonts/MetaWebPro-Black.eot');
+    src: local('☺'),
+        url('http://mozcom-cdn.mozilla.net/img/fonts/MetaWebPro-Black.woff')
+        format('woff');
+    font-weight: bold;
 }
 </style>
 </head>
@@ -44,7 +44,7 @@
   
   body {
     font: normal 16px/.738 MetaBlack, "Arial Black", sans-serif;
-  	color: #6D7581;
+    color: #6D7581;
   }
   
   select {
@@ -54,14 +54,14 @@
   }
   
   th {
-  	text-align: left;
-  	padding: 4px 4px 4px 12px;
-  	background: no-repeat;
+    text-align: left;
+    padding: 4px 4px 4px 12px;
+    background: no-repeat;
   }
   
   td {
-  	padding-left: 8px;
-  	text-align: right;
+    padding-left: 8px;
+    text-align: right;
   }
   
   #controls {
@@ -98,7 +98,7 @@
   
   <script src='util.js' type='text/javascript'></script>
   <script src='canvas.js' type='text/javascript'></script>
-  <script src='broadway.js' type='text/javascript'></script>
+  <script src='broadway-new.js' type='text/javascript'></script>
 
   <script type="text/javascript">
     $(function() {
@@ -277,8 +277,8 @@
 
   <div id="doc">
     <header>
-      <h1 id="site-title"><b>Broadway.js</b></h1>
-      <p id="tagline">An H.264 Decoder in Pure JavaScript <a href="broadway-new.html">(Try New Codec)</a></p>
+      <h1 id="site-title"><b>Broadway.js (NEW)</b></h1>
+      <p id="tagline">An H.264 Decoder in Pure JavaScript <a href="broadway.html">(Try Old Codec)</a></p>
     </header>
     <div>
       <div id="setting">
