--- a/Demo/broadway-old.html
+++ b/Demo/broadway-old.html
@@ -98,7 +98,7 @@
   
   <script src='util.js' type='text/javascript'></script>
   <script src='canvas.js' type='text/javascript'></script>
-  <script src='broadway.js' type='text/javascript'></script>
+  <script src='broadway-old.js' type='text/javascript'></script>
 
   <script type="text/javascript">
     $(function() {
@@ -278,7 +278,7 @@
 
   <div id="doc">
     <header>
-      <h1 id="site-title"><b>Broadway.js</b></h1>
+      <h1 id="site-title"><b>Broadway.js (Old)</b></h1>
       <p id="tagline">An H.264 Decoder in Pure JavaScript <a href="broadway-new.html">(Try New Codec)</a></p>
     </header>
     <div>
