Reorganized code, made codec run in a web worker, playing from .mp4 files works now, old player is broken, use test.html until I get broadway.html working again.
Former-commit-id: f5ae3ff10e769b9f9e65e83f3ec8ec26a7542966
Former-commit-id: a019646f9877853e7cf65d11bc4bc6ac474b8ceb

--- a/Player/mp4.html
+++ b/Player/mp4.html
@@ -13,6 +13,13 @@
   <script src='util.js' type='text/javascript'></script>
   <script src='stream.js' type='text/javascript'></script>
   <script src='mp4.js' type='text/javascript'></script>
+  <script type="text/javascript">
+    print = function (str) {
+      console.info(str);
+    }
+  </script>
+  <script src='broadway.js' type='text/javascript'></script>
+  <script src='decoder.js' type='text/javascript'></script>
 
   <script type="text/javascript">
       
