--- a/Player/broadway.html
+++ b/Player/broadway.html
@@ -21,6 +21,7 @@
   <script src='canvas.js' type='text/javascript'></script>
   <script src='broadway.js' type='text/javascript'></script>
   <script src='broadway-utils.js' type='text/javascript'></script>
+  <script src='decoder.js' type='text/javascript'></script>
 
   <script type="text/javascript">
     var url = window.location.href;
@@ -67,7 +68,7 @@
     
     function load() {
       setConfiguration(config);
-      broadway = new Broadway(document.getElementById('canvas'));
+      // broadway = new Broadway(document.getElementById('canvas'));
     }
     
     var isPlaying = false;
