--- a/storyDemo.html
+++ b/storyDemo.html
@@ -33,13 +33,13 @@
     <tr><td>Main Thread Decoding</td><td>Worker Decoding</td><td>Worker Decoding</td></tr>
     <tr>
       <td>
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="false" render="true"></div>
+        <div class="broadway" src="fox.mp4" width="640" height="360" style="float: left; position: relative;" workers="false" render="true"></div>
       </td>
       <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="fox.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
       </td>
       <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="fox.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
       </td>
     </tr>
     <tr>
@@ -47,10 +47,10 @@
         
       </td>
       <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="fox.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
       </td>
       <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
+        <div class="broadway" src="fox.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
       </td>
     </tr>
     <!--
