add (smaller) fox demo, add note about github.io being too slow
Former-commit-id: 531ca54b008d4c80966a76858bd78f291f6df3d7

--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     </head>
     <body>
         <ul>
-            <li><a href="treeDemo.html">Tree Demo</a></li>
-            <li><a href="storyDemo.html">Mozilla Story Demo</a></li>
+            <li><a href="foxDemo.html">Fox Demo</a></li>
+            <li>
+                Probably too slow with github.io hosting:
+                <ul>
+                    <li><a href="treeDemo.html">Tree Demo</a></li>
+                    <li><a href="storyDemo.html">Mozilla Story Demo</a></li>
+                </ul>
+            </li>
         </ul>
     </body>
 </html>
