Make Broadway build with the latest version of emscripten.
Former-commit-id: 34e3f125c7648a9d9d04b1c5fa76453ab0822fc5
Former-commit-id: bd784c55dd80bdaaaad940c1a666a5a74270fcd6

--- a/Player/storyDemo.html
+++ b/Player/storyDemo.html
@@ -27,45 +27,9 @@
   
   <!-- <canvas id='canvas' width="640" height="100" style="background-color: #333333;"></canvas> -->
   <br>
-  <a style="font-size: 24px; padding: 20px">Broadway.js - H.264 Decoding in JavaScript</a>
+  <a style="font-size: 24px; padding: 20px">Broadway.js - H.264 Decoding in JavaScript w/ asm.js</a>
   <br>
-  <table>
-    <tr><td>Main Thread Decoding</td><td>Worker Decoding</td><td>Worker Decoding</td></tr>
-    <tr>
-      <td>
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="false" render="true"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true"></div>
-      </td>
-    </tr>
-    <!--
-    <tr><td></td><td>Worker Thread 1 Decoding without Rendering</td><td>Worker Thread 2 Decoding without Rendering</td></tr>
-    <tr>
-      <td>
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="360" height="280" style="float: left; position: relative;" workers="true" render="false"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="360" height="280" style="float: left; position: relative;" workers="true" render="false"></div>
-      </td>
-    </tr>
-    -->
-  </table>  
+  <a style="font-size: 14px; padding: 20px">Click to Download and Play (The entire file is downloaded before playback begins. Once the file is cached, playback begins much faster.)</a><br><br>
+  <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="false" render="true"></div>
 </body>
 </html>
