--- a/Player/treeDemo.html
+++ b/Player/treeDemo.html
@@ -1,7 +1,6 @@
 <html>
 <head>
   <link type="text/css" href="screen.css" rel="stylesheet" />
-  <link type="text/css" href="jquery/theme/jquery-ui.css" rel="stylesheet" />
 </head>
 <body onload="load()">
   <script src="sylvester.js" type="text/javascript"></script>
@@ -27,45 +26,10 @@
   
   <!-- <canvas id='canvas' width="640" height="100" style="background-color: #333333;"></canvas> -->
   <br>
-  <a style="font-size: 24px; padding: 20px">Broadway.js - H.264 Decoding in JavaScript</a>
   <br>
-  <table>
-    <tr><td>Main Thread Decoding</td><td>Worker Thread 1 Decoding</td><td>Worker Thread 2 Decoding</td></tr>
-    <tr>
-      <td>
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="false" render="true"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        
-      </td>
-      <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="true"></div>
-      </td>
-    </tr>
-    <!--
-    <tr><td></td><td>Worker Thread 1 Decoding without Rendering</td><td>Worker Thread 2 Decoding without Rendering</td></tr>
-    <tr>
-      <td>
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="360" height="280" style="float: left; position: relative;" workers="true" render="false"></div>
-      </td>
-      <td>  
-        <div class="broadway" src="mozilla_story.mp4" width="360" height="280" style="float: left; position: relative;" workers="true" render="false"></div>
-      </td>
-    </tr>
-    -->
-  </table>  
+  <a style="font-size: 24px; padding: 20px">Broadway.js - H.264 Decoding in JavaScript w/ asm.js</a>
+  <br>
+  <a style="font-size: 14px; padding: 20px">Click to Download and Play (The entire file is downloaded before playback begins. Once the file is cached, playback begins much faster.)</a><br><br>
+  <div class="broadway" src="tree.mp4" width="560" height="304" style="float: left; position: relative;" workers="false" render="true"></div>
 </body>
 </html>
