--- a/Player/storyDemo.html
+++ b/Player/storyDemo.html
@@ -32,5 +32,7 @@
   <a style="font-size: 14px; padding: 20px">Click to Download and Play (The entire file is downloaded before playback begins. Once the file is cached, playback begins much faster.)</a><br><br>
   <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="false" render="true"></div>
   <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true" render="true"></div>
+  <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true" render="true"></div>
+  <div class="broadway" src="mozilla_story.mp4" width="640" height="360" style="float: left; position: relative;" workers="true" render="true"></div>
 </body>
 </html>
